backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 400m
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  ingressClassName: nginx
  rules:
    - host: new.coofis.com
      http:
        paths:
          - path: /api/(.+)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
